<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Tăng cỡ chữ - Big Font</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_page">Trang chủ</string>
    <string name="setting">Cài đặt</string>
    <string name="tip">Mẹo</string>
    <string name="font_weight">Độ dày phông chữ</string>
    <string name="sample_text_1">Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur?</string>
    <string name="sample_text_2">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</string>
    <string name="sample_text_title">Văn bản mẫu:</string>
    <string name="make_change_text_size">Làm cho văn bản nhỏ hơn hoặc lớn hơn</string>
    <string name="reset_to_default">Đặt lại mặc định</string>
    <string name="save">Lưu</string>
    <string name="apply">Áp dụng</string>
    <string name="make_change_text_font_weight">Làm cho chữ đậm hơn nhạt hơn</string>
    <string name="theme">Chủ đề</string>
    <string name="language">Ngôn ngữ</string>
    <string name="dark_theme">Chế độ tối</string>
    <string name="delete">Xoá</string>
    <string name="using">ĐANG DÙNG</string>
    <string name="require_permission">Yêu cầu quyền</string>
    <string name="u_need_to_accept_permission">Bạn cần cấp quyền để thay đổi cỡ chữ hệ thống. Vui lòng cấp quyền trong cài đặt.</string>
    <string name="cancel">Hủy</string>
    <string name="dont_have_permission">Không có quyền, không thể thực hiện thao tác.</string>
    <string name="save_font_size">"Lưu cỡ chữ "</string>
    <string name="applied_font_size">"Đã áp dụng cỡ chữ "</string>
    <string name="deleted_font_size">"Đã xóa cỡ chữ "</string>
    <string name="dismiss">Đóng</string>
    <string name="applied_font_weight">Đã áp dụng độ dày phông chữ: %1$s</string>
    <string name="reset_to_default_font_weight">Đã đặt lại độ dày phông chữ về mặc định.</string>
    <string name="current">Hiện tại</string>
    <string name="choose_a_language">Chọn ngôn ngữ của bạn</string>
    <string name="vietnamese">Tiếng Việt</string>
    <string name="english">Tiếng Anh</string>
    <string name="french">Tiếng Pháp</string>
    <string name="german">Tiếng Đức</string>
    <string name="chinese">Tiếng Trung</string>
    <string name="japanese">Tiếng Nhật</string>
    <string name="spanish">Tiếng Tây Ban Nha</string>
    <string name="russian">Tiếng Nga</string>
    <string name="portuguese">Tiếng Bồ Đào Nha</string>
    <string name="korean">Tiếng Hàn</string>
    <string name="italian">Tiếng Ý</string>
    <string name="arabic">Tiếng Ả Rập</string>
    <string name="thai">Tiếng Thái</string>
    <string name="laos">Tiếng Lào</string>


    <!--    //tip-->
    <string name="tip_elderly_title">Dành cho Người Cao Tuổi hoặc Suy Giảm Thị Lực</string>
    <string name="tip_elderly_description">Tăng kích thước phông chữ lên khoảng 125% đến 150% để dễ đọc hơn. Phông chữ lớn hơn giúp giảm căng thẳng mắt và làm cho văn bản dễ đọc hơn cho những người bị suy giảm thị lực.</string>

    <string name="tip_sunlight_title">Dành cho Đọc dưới Ánh Sáng Mặt Trời</string>
    <string name="tip_sunlight_description">Đặt kích thước phông chữ vào khoảng 110% đến 130% để cải thiện khả năng đọc dưới ánh sáng mặt trời. Điều này giảm độ chói và cải thiện độ tương phản.</string>

    <string name="tip_long_sessions_title">Dành cho Các Phiên Đọc Kéo Dài</string>
    <string name="tip_long_sessions_description">Tăng nhẹ kích thước phông chữ lên 110% đến 120% để giảm căng thẳng mắt trong quá trình đọc dài. Điều này giúp duy trì sự tập trung và thoải mái.</string>

    <string name="tip_young_users_title">Dành cho Người Trẻ với Thị Lực Tốt</string>
    <string name="tip_young_users_description">Duy trì kích thước phông chữ ở mức 100% đến 110% để hiển thị nhiều nội dung hơn trên màn hình. Điều này phù hợp cho những người dùng có thị lực tốt và muốn hiển thị nhiều nội dung hơn.</string>

    <string name="tip_night_reading_title">Dành cho Đọc Vào Ban Đêm</string>
    <string name="tip_night_reading_description">Điều chỉnh kích thước phông chữ lên khoảng 110% để đọc ban đêm thoải mái hơn. Điều này giúp giảm độ chói và căng thẳng mắt trong điều kiện ánh sáng yếu.</string>

    <string name="tip_temporary_impairment_title">Dành cho Người Suy Giảm Thị Lực Tạm Thời</string>
    <string name="tip_temporary_impairment_description">Tăng tạm thời kích thước phông chữ lên 150% hoặc hơn để dễ nhìn hơn sau phẫu thuật. Điều này giúp trong quá trình đọc trong thời gian phục hồi</string>

    <string name="tip_multitasking_title">Dành cho Môi Trường Đa Nhiệm</string>
    <string name="tip_multitasking_description">Đặt kích thước phông chữ ở mức 130% để dễ dàng nhìn thoáng qua trong môi trường bận rộn. Văn bản lớn hơn dễ đọc hơn khi nhìn nhanh.</string>

    <string name="tip_children_title">Dành cho trẻ em hoặc Mục Đích Giáo Dục</string>
    <string name="tip_children_description">Đặt kích thước phông chữ ở mức 120% để hỗ trợ trẻ em đọc và học. Điều này giúp cải thiện sự tập trung và hiểu biết của trẻ.</string>

    <string name="tip_quick_browsing_title">Dành cho Duyệt Nhanh</string>
    <string name="tip_quick_browsing_description">Duy trì kích thước phông chữ ở mức 105% để duyệt nhanh và hiệu quả mà không mất nội dung. Điều này cân bằng giữa khả năng đọc và mật độ nội dung.</string>

    <string name="tip_developing_eyesight_title">Dành cho Trẻ Em đang Phát Triển Thị Lực</string>
    <string name="tip_developing_eyesight_description">Đặt kích thước phông chữ ở mức 115% để giúp trẻ em phát triển thị lực đọc dễ dàng hơn. Điều này hỗ trợ sự phát triển thị lực của họ và giảm căng thẳng mắt.</string>

    <string name="tip_teenagers_title">Dành cho Thanh Thiếu Niên Sử Dụng Màn Hình Thường Xuyên</string>
    <string name="tip_teenagers_description">Điều chỉnh kích thước phông chữ lên 110% cho thanh thiếu niên để giảm căng thẳng mắt do sử dụng màn hình thường xuyên. Điều này giúp giảm thiểu tác động của thời gian sử dụng màn hình kéo dài.</string>

    <string name="tip_normal_adult_title">Dành cho Người Lớn Với Thị Lực Bình Thường</string>
    <string name="tip_normal_adult_description">Duy trì kích thước phông chữ ở mức 100% cho người lớn có thị lực bình thường để tối đa hóa không gian màn hình. Điều này lý tưởng cho những người dùng muốn có nhiều thông tin hơn trên màn hình.</string>

    <string name="tip_severe_impairment_title">Dành cho Người Già với Suy Giảm Thị Lực Nghiêm Trọng</string>
    <string name="tip_severe_impairment_description">Tăng kích thước phông chữ lên 160% hoặc hơn cho người già bị suy giảm thị lực nghiêm trọng. Điều này làm cho văn bản dễ đọc hơn nhiều.</string>

    <string name="tip_professional_tasks_title">Dành cho Các Nhiệm Vụ Đọc Chuyên Nghiệp</string>
    <string name="tip_professional_tasks_description">Đặt kích thước phông chữ ở mức 110% để cân bằng khả năng đọc và không gian màn hình cho các nhiệm vụ chuyên nghiệp. Điều này giúp duy trì hiệu quả và thoải mái.</string>

    <string name="tip_astigmatism_title">Dành cho Người Dùng Loạn Thị</string>
    <string name="tip_astigmatism_description">Tăng kích thước phông chữ lên 130% cho người dùng bị loạn thị để giảm mờ. Văn bản lớn hơn ít có khả năng bị biến dạng hơn.</string>

    <string name="tip_low_light_title">Dành cho Người Dùng Trong Điều Kiện Ánh Sáng Yếu</string>
    <string name="tip_low_light_description">Đặt kích thước phông chữ ở mức 120% để cải thiện khả năng đọc trong điều kiện ánh sáng yếu. Điều này giúp giảm căng thẳng mắt trong môi trường tối.</string>

    <string name="tip_glasses_title">Dành cho Người Dùng Đeo Kính</string>
    <string name="tip_glasses_description">Điều chỉnh kích thước phông chữ lên 110% để giúp người dùng đeo kính đọc dễ dàng hơn. Điều này đảm bảo rằng văn bản dễ nhìn thấy.</string>

    <string name="tip_contact_lenses_title">Dành cho Người Dùng Đeo Kính Áp Tròng</string>
    <string name="tip_contact_lenses_description">Duy trì kích thước phông chữ ở mức 100% cho người dùng đeo kính áp tròng để tránh căng thẳng mắt. Điều này ngăn ngừa sự khó chịu do sử dụng kéo dài.</string>

    <string name="tip_dyslexia_title">Dành cho Người Dùng với Chứng Khó Đọc</string>
    <string name="tip_dyslexia_description">Tăng kích thước phông chữ lên 140% cho người dùng bị chứng khó đọc. Văn bản lớn hơn và rõ ràng hơn có thể giúp cải thiện tốc độ và sự hiểu biết khi đọc.</string>
    <string name="language_applied">Đã áp dụng ngôn ngữ: </string>

</resources>