<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.bigfont.ui.home.HomeFragment"
        android:label="@string/home_page"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_font_weight"
        android:name="com.example.bigfont.ui.fontweight.FontWeightFragment"
        android:label="@string/font_weight"
        tools:layout="@layout/fragment_font_weight" />

    <fragment
        android:id="@+id/nav_tips"
        android:name="com.example.bigfont.ui.tip.TipsFragment"
        android:label="@string/tip"
        tools:layout="@layout/fragment_tips">
        <action
            android:id="@+id/action_nav_tips_to_detailTipFragment"
            app:destination="@id/detailTipFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.bigfont.ui.setting.SettingsFragment"
        android:label="@string/setting"
        tools:layout="@layout/fragment_settings" />
    <!---->
    <fragment
        android:id="@+id/detailTipFragment"
        android:name="com.example.bigfont.ui.tip.DetailTipFragment"
        android:label="@string/tip"
        tools:layout="@layout/fragment_detail_tip">
        <argument
            android:name="tipId"
            app:argType="integer" />
        <argument
            android:name="tipTitle"
            app:argType="string" />
        <argument
            android:name="tipContent"
            app:argType="string" />
    </fragment>

</navigation>