<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/android:colorBackground"
    tools:context=".ui.fontweight.FontWeightFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/contentScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/android:colorBackground"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/text_card_view"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="6dp"
                app:cardBackgroundColor="?attr/colorSurfaceContainer"
                app:cardCornerRadius="16dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/colorSurfaceContainer"
                    android:orientation="vertical"
                    android:padding="16dp">

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:nestedScrollingEnabled="true">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/title_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/sample_text_title"
                                android:textColor="?attr/colorOnSurface"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <!-- TextView để hiển thị văn bản cuộn được -->
                            <TextView
                                android:id="@+id/content_text_view_1"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:lineSpacingExtra="4dp"
                                android:text="@string/sample_text_1"
                                android:textColor="?attr/colorOnSurface"
                                android:textSize="14sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/content_text_view_2"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:lineSpacingExtra="4dp"
                                android:text="@string/sample_text_2"
                                android:textColor="?attr/colorOnSurface"
                                android:textSize="14sp" />

                        </LinearLayout>

                    </ScrollView>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/custom_size_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:cardCornerRadius="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/colorTertiaryContainer"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <TextView
                        android:id="@+id/txt_custom_size_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="100%"
                        android:textColor="?attr/colorSecondary"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <SeekBar
                        android:id="@+id/sb_custom_size"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:progressTint="?attr/colorSecondary"
                        android:thumbTint="?attr/colorPrimary" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/make_change_text_font_weight"
                        android:textColor="?attr/colorOnSurface"
                        android:textSize="14sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_save"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="6dp"
                            android:layout_weight="1"
                            android:backgroundTint="?attr/colorSecondary"
                            android:text="@string/save"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="16sp" />

                        <Button
                            android:id="@+id/btn_reset_to_default"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="6dp"
                            android:layout_weight="1"
                            android:backgroundTint="?attr/colorSecondary"
                            android:text="@string/reset_to_default"
                            android:textColor="?attr/colorOnSecondary"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_list_custom_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:nestedScrollingEnabled="false"
                tools:listitem="@layout/item_custom_size" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="?attr/colorPrimary"
        android:progressBackgroundTint="@null"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>